--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: poppins,sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
@@ -15,6 +15,26 @@
   
 }
 
+/* Estilos para la barra de desplazamiento */
+::-webkit-scrollbar {
+  width: 13px; /* Ancho de la barra de desplazamiento */
+}
+
+/* Estilo del riel de la barra de desplazamiento */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Color del riel */
+}
+
+/* Estilo del mango de la barra de desplazamiento */
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color del mango */
+  border-radius: 6px; /* Radio de borde del mango */
+}
+
+/* Estilo del mango al pasar el ratón por encima */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Color del mango al pasar el ratón por encima */
+}
 
 body {
   margin: 0;
