--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,17 @@ body {
 
 }
 
+h4 {
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+
+p {
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+
+ul {
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
